# shuup-project-template

./: CLAUDE.md  pyproject.toml
shuup-template/: pyproject.toml
